tests/snapshots/file@call@num.lox.snap
---
source: tests/common/mod.rs
description: "123(); // expect runtime error: Can only call functions and classes.\n"
input_file: crafting_interpreters_test_files/call/num.lox
---
OUT: 

===
ERR: 
  × can only call functions and classes
   ╭────
 1 │ 123(); // expect runtime error: Can only call functions and classes.
   ·    ┬
   ·    ╰── here
   ╰────
